# winebox

./: .gitignore  .readthedocs.yaml  CLAUDE.md  README.md  SECURITY.md  pyproject.toml  tasks.py  user_admin.py  winebox_ctl.py
.github/workflows/: ci.yml  deploy.yml  publish.yml
config/: config.toml.example  secrets.env.example
deploy/: __init__.py  app.py  common.py  deploy.py  import_xwines_mongo.py  initialise.py  nginx-winebox.conf  rebuild.py  setup.py  setup_droplet.py  winebox.service  xwines.py
docs/: api-reference.md  conf.py  configuration.md  deployment.md  index.md  user-guide.md
logos/: brand-guide.html
scripts/: __init__.py  generate_test_csv.py  import_xwines.py  migrate_wine_ownership.py  seed_reference_data.py  setup_digitalocean_fastmail_dns.py
scripts/migrations/: __init__.py  db_migrate_0_to_1.py  db_migrate_1_to_2.py  db_migrate_2_to_3.py  db_migrate_3_to_4.py  db_revert_1_to_0.py  db_revert_2_to_1.py  db_revert_3_to_2.py  db_revert_4_to_3.py  drop_old_text_index.py  migrate_sqlite_to_mongo.py  runner.py
tests/: __init__.py  conftest.py  test_admin.py  test_analytics.py  test_auth_flows.py  test_checkin_e2e.py  test_cli.py  test_config.py  test_email_service.py  test_export.py  test_import.py  test_import_e2e.py  test_import_service.py  test_import_xwines_e2e.py  test_ocr.py  test_region_fields.py  test_registration_e2e.py  test_search.py  test_table_view.py  test_transactions.py  test_wine_ownership.py  test_wines.py  test_xwines.py  test_xwines_e2e.py  test_xwines_enrichment.py
tests/data/: xwines-test-data.csv
winebox/: __init__.py  config.py  database.py  main.py
winebox/auth/: __init__.py  backend.py  db.py  schemas.py  users.py
winebox/cli/: __init__.py  purge_data.py  server.py  user_admin.py
winebox/config/: __init__.py  loader.py  schema.py  settings.py
winebox/models/: __init__.py  classification.py  grape_variety.py  import_batch.py  inventory.py  login_attempt.py  region.py  token_blacklist.py  transaction.py  user.py  wine.py  wine_type.py  xwines.py
winebox/routers/: __init__.py  admin.py  auth.py  cellar.py  export.py  import_router.py  reference.py  search.py  transactions.py  wines.py  xwines.py
winebox/routers/wines/: __init__.py  _common.py  checkin.py  crud.py  grapes.py  scan.py  scores.py
winebox/schemas/: __init__.py  export.py  import_schemas.py  reference.py  transaction.py  wine.py  xwines.py
winebox/services/: __init__.py  analytics.py  auth.py  crypto.py  export_service.py  image_storage.py  import_service.py  ocr.py  vision.py  wine_parser.py  xwines_enrichment.py
winebox/services/email/: __init__.py  base.py  console.py  ses.py
winebox/services/email/templates/: password_reset.html  verification.html
winebox/services/import_service/: __init__.py  constants.py  converters.py  mapping.py  parsers.py  processor.py
winebox/services/wine_parser/: __init__.py  constants.py  extractors.py  parser.py
winebox/static/: admin.html  index.html  landing.html
winebox/static/css/: landing.css  style.css
winebox/static/js/: admin.js  app.js  landing.js  posthog-init.js
