[project]
name = "winebox"
version = "0.3.2"
description = "Wine Cellar Management Application with OCR label scanning"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Joe Drumgoole", email = "joe@joedrumgoole.com"}
]
keywords = ["wine", "cellar", "inventory", "ocr", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
    "jinja2>=3.1.0",
    "bcrypt>=4.1.2",
    "python-jose[cryptography]>=3.3.0",
    "anthropic>=0.40.0",
    "slowapi>=0.1.9",
    "pyyaml>=6.0.0",
    "aioboto3>=13.0.0",
    # MongoDB dependencies
    "motor>=3.3.0",
    "beanie>=1.25.0",
    "fastapi-users[beanie]>=14.0.0",
]

[project.urls]
Homepage = "https://github.com/jdrumgoole/winebox"
Documentation = "https://winebox.readthedocs.io"
Repository = "https://github.com/jdrumgoole/winebox"
Issues = "https://github.com/jdrumgoole/winebox/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-playwright>=0.4.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.26.0",
    "invoke>=2.2.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
    "mongomock-motor>=0.0.21",
]

[project.scripts]
winebox-server = "winebox.cli.server:main"
winebox-admin = "winebox.cli.user_admin:main"
winebox-purge = "winebox.cli.purge_data:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "e2e: marks tests as end-to-end tests (deselect with '-m \"not e2e\"')",
]

[tool.hatch.build.targets.wheel]
packages = ["winebox"]
